---------------------------------------------------------------------------------------------------
Version: 20.2.15
Date: 2023-11-01
  Features:
  Changes:
  Bugfixes:
    - Halloween 2023 - Updated to latest Zombie mod gravestone graphics structure.
  Info:
---------------------------------------------------------------------------------------------------
Version: 20.2.14
Date: 2023-10-29
  Features:
  Changes:
    - Halloween 2023 - Landfill is returned back to vanilla Factorio's requirements and recipe. Made available for save games created on an older mod version.
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 20.2.13
Date: 2023-10-28
  Features:
    - Halloween 2023 - Add combat lighting from Battlefluffy scenario.
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 20.2.12
Date: 2023-10-25
  Features:
    - Halloween 2023 - Added new mod for a Halloween play through.
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 20.2.11
Date: 2022-09-27
  Features:
    - JD Split Factory - repurposing of old `JD P0ober Split Factory` feature to make it more generic. So that JD is on one side and anyone else is on the other. Also updated to work in Factorio 1.1.69. This new mode is not backwards compatible with a save made using the `JD P0ober Split Factory` feature.
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 20.2.10
Date: 2022-09-19
  Features:
  Changes:
    - Battlefluffy - made the artillery wagon unable to fire to balance out scenario limitations. It can still be used to carry a lot of shells.
    - Battlefluffy - reduced fire color saturation for both oil and forest fires.
  Bugfixes:
  Info: