@@ -1,5 +1,11 @@
 [entity-name]
-jd_plays-halloween-2023-radar=Halloween radar
+jd_plays-halloween_2023-radar=Halloween radar
+jd_plays-halloween_2023-biter_egg_nest_small=Small pumpkin patch
+jd_plays-halloween_2023-biter_egg_nest_small-corpse=Small pumpkin patch corpse
+jd_plays-halloween_2023-biter_egg_nest_large=Large pumpkin patch
+jd_plays-halloween_2023-biter_egg_nest_large-corpse=Large pumpkin patch corpse
 
 [entity-description]
-jd_plays-halloween-2023-radar=A rickety old radar with very limited vision and no scan area. Perfect for a halloween adventure.
+jd_plays-halloween_2023-radar=A rickety old radar with very limited vision and no scan area. Perfect for a halloween adventure.
+jd_plays-halloween_2023-biter_egg_nest_small=Smashing pumpkins is mean and might upset the residents
+jd_plays-halloween_2023-biter_egg_nest_large=Smashing pumpkins is mean and might upset the residents
