@@ -11,7 +11,6 @@ Halloween 2023
 ==============
 
 Requested:
-    - Rename the biter eggs to pumpkin patch. Use a new local name and update the prototype.
     - A way to have all the lights go off for a bit, both lamps and inbuilt lighting. I can't find a way to disable or cancel out a lamp. So the only option would be to replace them all with non light versions and then switch them back afterwards. We could do this around each player for all lamps within X range. But this would need a bit of coding and logic, as we need to track the changed lights, player locations, handle things being removed in alternate state s and so only returned as appropriate, especially with inbuilt lighting and accounting for its own logic. Also need to check how inbuilt lighting would handle it, I think fine.
 
 
